# OpenGL_learn_record

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
includes/: Guard.hpp  Logger.hpp  Mesh.hpp  Shader.hpp  Texture.hpp  glad_wrapper.hpp  glfw_wrapper.hpp
includes/core/: glad_wrapper.hpp  glfw_wrapper.hpp
includes/rendering/: Mesh.hpp  Model.hpp  Shader.hpp  Texture.hpp
includes/scene/: Camera.hpp
includes/utils/: Guard.hpp  Logger.hpp  Unreachable.hpp
shader/light/: color.frag
src/: Mesh.cpp  Shader.cpp  Texture.cpp  camera_main.cpp  glad_wrapper.cpp  glfw_wrapper.cpp  light_main.cpp  main.cpp
src/core/: glad_wrapper.cpp  glfw_wrapper.cpp
src/examples/camera/: camera_main.cpp
src/examples/light/: light_main.cpp
src/examples/model/: model_main.cpp
src/rendering/: Mesh.cpp  Model.cpp  Shader.cpp  Texture.cpp
src/scene/: Camera.cpp
